[package]
name = "Nemocracy"
version = "0.1.1"
authors = ["duoruixu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# copied
description = "Fujisaki-Suzuki Ring Signatures in Rust"
keywords = ["ring", "signature", "crypto", "cryptography"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/rozbb/fujisaki-ringsig"
documentation = "https://docs.rs/fujisaki_ringsig"

[features]
default = ["std"]
std = ["blake2/std", "curve25519-dalek/std", "digest/std"]
#end copied

[dependencies]
fujisaki_ringsig = "0.1.1"
dns-lookup = "1.0.5"
rsa = "0.3.0"
rand = "0.7.0"
# rand_core = "0.6.2"
#copied
blake2 = { version = "0.9", default-features = false }
curve25519-dalek = { version = "3.0", default-features = false, features = ["u64_backend"] }
digest = { version = "0.9", default-features = false }
generic-array = "0.9"
# This isn't the latest version of rand_core, but it's what Dalek is pinned to right now
rand_core  = { version = "0.5", default-features = false }

#end copied